# Skyo--

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Skyo.cpp  build.sh  debug.sh
include/: event.hpp  global.hpp  parser.hpp  registry.hpp
include/commands/: developer.hpp  general.hpp  utility.hpp
include/core/: argument.hpp  command.hpp  context.hpp
include/utils/: config.hpp  cooldown.hpp  helper.hpp  logger.hpp  version.hpp
src/: Skyo.cpp  event.cpp  parser.cpp  registry.cpp
src/commands/: developer.cpp  general.cpp  utility.cpp
src/events/: on_message.cpp  on_presence_update.cpp  on_ready.cpp
src/utils/: config.cpp  cooldown.cpp  helper.cpp  logger.cpp  version.cpp
